--- a/msgpck/Cargo.toml
+++ b/msgpck/Cargo.toml
@@ -13,3 +13,8 @@ default = ["std"]
 alloc = []
 std = ["debug", "alloc", "num-traits/std"]
 debug = []
+
+[dev-dependencies]
+paste = "1.0.14"
+proptest = "1.3.1"
+proptest-derive = "0.4.0"
