--- a/msgpck/Cargo.toml
+++ b/msgpck/Cargo.toml
@@ -7,12 +7,14 @@ edition = "2021"
 
 [dependencies]
 num-traits = { version = "0.2.17", default-features = false }
+msgpck_derive = { version = "0.1.0", path = "../msgpck_derive", optional = true }
 
 [features]
-default = ["std"]
+default = ["std", "derive"]
 alloc = []
 std = ["debug", "alloc", "num-traits/std"]
 debug = []
+derive = ["dep:msgpck_derive"]
 
 [dev-dependencies]
 paste = "1.0.14"
