--- a/msgpck_derive/Cargo.toml
+++ b/msgpck_derive/Cargo.toml
@@ -17,5 +17,7 @@ syn = { version = "2.0.38", features = [
 ] }
 
 [dev-dependencies]
+msgpck = { path = "../msgpck" }
 proptest = "1.3.1"
 proptest-derive = "0.4.0"
+trybuild = "1.0.85"
