--- a/msgpck/Cargo.toml
+++ b/msgpck/Cargo.toml
@@ -8,12 +8,13 @@ edition = "2021"
 [dependencies]
 num-traits = { version = "0.2.17", default-features = false }
 msgpck_derive = { version = "0.1.0", path = "../msgpck_derive", optional = true }
+thiserror = { version = "1.0.50", optional = true }
 
 [features]
 default = ["std", "derive"]
 alloc = []
-std = ["debug", "alloc", "num-traits/std"]
 debug = []
+std = ["debug", "alloc", "num-traits/std", "dep:thiserror"]
 derive = ["dep:msgpck_derive"]
 
 [dev-dependencies]
