--- a/msgpck/Cargo.toml
+++ b/msgpck/Cargo.toml
@@ -8,10 +8,11 @@ edition = "2021"
 [dependencies]
 num-traits = { version = "0.2.17", default-features = false }
 msgpck_derive = { version = "0.1.0", path = "../msgpck_derive", optional = true }
+heapless07 = { package = "heapless", version = "0.7.16", optional = true }
 thiserror = { version = "1.0.50", optional = true }
 
 [features]
-default = ["std", "derive"]
+default = ["std", "derive", "dep:heapless07"]
 alloc = []
 debug = []
 std = ["debug", "alloc", "num-traits/std", "dep:thiserror"]
