add binary to test bloat
`cargo bloat --release --filter msg` does something

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,6 @@ members = [
     "msgpck_bloat_test",
 ]
 
-exclude = ["msgpck-rs-tests"]
+exclude = ["msgpck-rs-tests", "msgpck_bloat_test"]
 
 resolver = "2"
