--- a/msgpck/Cargo.toml
+++ b/msgpck/Cargo.toml
@@ -3,8 +3,6 @@ name = "msgpck"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 num-traits = { version = "0.2.17", default-features = false }
 msgpck_derive = { version = "0.1.0", path = "../msgpck_derive", optional = true }
@@ -37,6 +35,8 @@ derive = ["dep:msgpck_derive"]
 reduce-size = []
 # Adds async packing for writers that support it
 async = ["dep:embedded-io-async"]
+# Calculate size hints for most types
+size-hints = []
 
 [dev-dependencies]
 paste = "1.0.14"
