--- a/msgpck-rs/Cargo.toml
+++ b/msgpck-rs/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-msgpck-rs-derive = { path = "../msgpck-rs-derive" }
+msgpck-rs-derive = { version = "0.1.0", registry = "ttc-shared", path = "../msgpck-rs-derive" }
 thiserror = { version = "1.0.50", optional = true }
 heapless07 = { package = "heapless", version = "0.7.16", optional = true }
 
