--- a/msgpck-rs/Cargo.toml
+++ b/msgpck-rs/Cargo.toml
@@ -8,6 +8,7 @@ rust-version = "1.75"
 msgpck-rs-derive = { version = "0.1.0", registry = "ttc-shared", path = "../msgpck-rs-derive" }
 thiserror = { version = "1.0.50", optional = true }
 heapless07 = { package = "heapless", version = "0.7.16", optional = true }
+heapless08 = { package = "heapless", version = "0.8.0", optional = true }
 
 [features]
 alloc = []
