gitlab-ci: Update builder

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ stages:
   - deploy
 
 default:
-  image: registry.thetc.dev/elevate/core/docker/rust-builder:2023-06-28
+  image: registry.thetc.dev/elevate/shared/core/docker/rust-builder:2024-01-02
 
 build:
   stage: build
@@ -18,14 +18,14 @@ release-crate:
     - export REGISTRY_REPO_ID=1035 # https://thetc.dev/rust-shared/registry
   script:
     - pushd msgpck-rs-derive
-    - export CRATE_NAME=$(cargo get --name) CRATE_VERSION=$(cargo get version)
+    - export CRATE_NAME=$(cargo get package.name) CRATE_VERSION=$(cargo get package.version)
     - export CRATE_FILE=${CRATE_NAME}-${CRATE_VERSION}.crate
     - cargo package --no-verify
     - cargo metadata --format-version 1 > metadata.json
     - 'curl --header "JOB-TOKEN: $CI_JOB_TOKEN" --upload-file ../target/package/${CRATE_FILE} "${CI_API_V4_URL}/projects/${REGISTRY_REPO_ID}/packages/generic/${CRATE_NAME}/${CRATE_VERSION}/${CRATE_FILE}"'
     - 'curl --header "JOB-TOKEN: $CI_JOB_TOKEN" --upload-file metadata.json "${CI_API_V4_URL}/projects/${REGISTRY_REPO_ID}/packages/generic/${CRATE_NAME}/${CRATE_VERSION}/metadata.json"'
     - popd && pushd msgpck-rs
-    - export CRATE_NAME=$(cargo get --name) CRATE_VERSION=$(cargo get version)
+    - export CRATE_NAME=$(cargo get package.name) CRATE_VERSION=$(cargo get package.version)
     - export CRATE_FILE=${CRATE_NAME}-${CRATE_VERSION}.crate
     - cargo package --no-verify
     - cargo metadata --format-version 1 > metadata.json
