--- a/msgpck-rs-derive/Cargo.toml
+++ b/msgpck-rs-derive/Cargo.toml
@@ -9,6 +9,7 @@ proc-macro = true
 [dependencies]
 proc-macro2 = "1"
 quote = "1"
+strum = { version = "0.25.0", features = ["derive"] }
 
 [dependencies.syn]
 version = "2"
