--- a/msgpck-rs/Cargo.toml
+++ b/msgpck-rs/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 rust-version = "1.75"
 
 [dependencies]
-msgpck-rs-derive = { version = "0.2.0", registry = "ttc-shared", path = "../msgpck-rs-derive" }
+msgpck-rs-derive = { version = "0.2.8", path = "../msgpck-rs-derive" }
 thiserror = { version = "1.0.50", optional = true }
 heapless07 = { package = "heapless", version = "0.7.16", optional = true }
 heapless08 = { package = "heapless", version = "0.8.0", optional = true }
