--- a/msgpck/Cargo.toml
+++ b/msgpck/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "msgpck-rs"
+name = "msgpck"
 version = "0.2.8"
 edition = "2021"
 rust-version = "1.75"
 
 [dependencies]
-msgpck-rs-derive = { version = "0.2.8", path = "../msgpck-rs-derive" }
+msgpck-derive = { version = "0.2.8", path = "../msgpck-derive" }
 thiserror = { version = "1.0.50", optional = true }
 heapless07 = { package = "heapless", version = "0.7.16", optional = true }
 heapless08 = { package = "heapless", version = "0.8.0", optional = true }
