--- a/msgpck-tests/Cargo.toml
+++ b/msgpck-tests/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "msgpck-tests"
 edition = "2021"
+publish = false
 
 [dependencies]
 msgpck = { path = "../msgpck", features = ["std"] }
